# ComfyUI-MatAnyone2

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
matanyone2/inference/: inference_core.py
matanyone2/utils/: get_default_model.py
workflow/: matanyone2.json
