[project]
name = "MatAnyone2"
description = "MatAnyone2's method for segmenting the characters in the video"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.21", "Pillow>=9.5", "opencv-python>=4.8", "tqdm>=4.66", "hydra-core>=1.3.2", "omegaconf>=2.3", "einops>=0.6", "imageio>=2.25.0", "imageio[ffmpeg]", "huggingface_hub>=0.36.2", "safetensors>=0.4", "torch>=2.1", "torchvision>=0.16"]

[project.urls]
Repository = "https://github.com/starsFriday/ComfyUI-MatAnyone2"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/starsFriday/ComfyUI-MatAnyone2/wiki"
"Bug Tracker" = "https://github.com/starsFriday/ComfyUI-MatAnyone2/issues"

[tool.comfy]
PublisherId = "starsfriday"
DisplayName = "ComfyUI-MatAnyone2"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

